--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,14 +14,29 @@
         android:layout_weight="1"
         tools:context="org.tensorflow.demo.CameraActivity" />
 
-    <Button
-        android:id="@+id/btn_capture"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="32dp"
-        android:background="@drawable/button_shutter" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btn_capture"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="32dp"
+            android:background="@drawable/button_shutter" />
+
+        <Button
+            android:id="@+id/btn_detect_still_image"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignBaseline="@id/btn_capture"
+            android:layout_marginEnd="16dp"
+            android:layout_toStartOf="@id/btn_capture"
+            android:background="@drawable/ic_baseline_image_24" />
+
+    </RelativeLayout>
 
 
 </LinearLayout>
