--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#2B2B2B</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#BABABA</color>
+    <color name="colorAccent">#00e5ff</color>
 </resources>
