--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,9 @@
     tools:context=".MainActivity">
 
     <FrameLayout
+        android:layout_marginTop="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
